# dragonfox-mediasync-client

./: README.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  hotkey.rs  lib.rs  main.rs  media.rs  protocol.rs  state.rs  tray.rs  websocket.rs
src/components/: ConnectionStatus.vue  EventLog.vue  RoomInput.vue  SettingsPanel.vue
src/stores/: sync.ts
